--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,17 @@
     background: #1ab69c5d;
 }
 
+.sectionTitle {
+    font-weight: 700;
+    font-size: 4rem;
+    font-family: "League Spartan", sans-serif;
+    color: var(--black);
+    text-align: center;
+    margin-bottom: 32px;
+    text-decoration: underline var(--primary);
+    text-decoration-thickness: 5px;
+}
+
 /*--- Container ---*/
 .container {
     padding-left: 15px;
